Simplify HTML and CSS

--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -16,10 +16,10 @@ figures:
 
 {% include ahoy.html %}
 
-  <div class="banner banner_details" style="background-image: url(/images/fahrenheit/2048-wide/poster-b.jpg); background-position: 25% 50%;">
-    <div class="banner__title-container">
-      <h1 class="banner__title banner__title_details">Fahrenheit Studio</h1>
-      <p class="banner__with">with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
+  <div class="project-header" style="background-image: url(/images/fahrenheit/2048-wide/poster-b.jpg); background-position: 25% 50%;">
+    <div class="project-header__container">
+      <h1 class="project-header__title">Fahrenheit Studio</h1>
+      <p class="project-header__company">with the team at <a href="http://fahrenheit.com">Fahrenheit Studio</a></p>
     </div>
   </div>
 
@@ -84,12 +84,12 @@ figures:
 
   </div>
 
-  <a href="/good-fest" class="banner banner_next" style="background-image: url(/images/good-fest/2048-wide/poster-a.jpg); background-position: top;">
-    <div class="banner__next-project-container">
-      <h2 class="banner__next-project">Next project →</h2>
+  <a href="/good-fest" class="project-next" style="background-image: url(/images/good-fest/2048-wide/poster-a.jpg); background-position: top;">
+    <div class="project-next__direction">
+      <h2>Next project →</h2>
     </div>
-    <div class="banner__title-container banner__title-container_link banner__title-container_next">
-      <h3 class="banner__title banner__title_link">GOOD Fest</h3>
-      <p class="banner__with banner__with_link">with the team at <span class="phrase">GOOD Worldwide,</span> <span class="phrase">sponsored by Google</span></p>
+    <div class="project-next__container">
+      <h3 class="project-next__title">GOOD Fest</h3>
+      <p class="project-next__company">with the team at <span class="phrase">GOOD Worldwide,</span> <span class="phrase">sponsored by Google</span></p>
     </div>
   </a>
