--- a/food-oasis.html
+++ b/food-oasis.html
@@ -14,10 +14,10 @@ figures:
 
 {% include ahoy.html %}
 
-  <div class="banner banner_details" style="background-image: url(/images/food-oasis/2048-wide/poster-c.jpg); background-position: 25% 50%;">
-    <div class="banner__title-container">
-      <h1 class="banner__title banner__title_details">Food Oasis <span class="phrase">Los Angeles</span></h1>
-      <p class="banner__with">with the volunteers at <a href="http://hackforla.nationbuilder.com/about" class="phrase">Code for America</a></p>
+  <div class="project-header" style="background-image: url(/images/food-oasis/2048-wide/poster-c.jpg); background-position: 25% 50%;">
+    <div class="project-header__container">
+      <h1 class="project-header__title">Food Oasis <span class="phrase">Los Angeles</span></h1>
+      <p class="project-header__company">with the volunteers at <a href="http://hackforla.nationbuilder.com/about" class="phrase">Code for America</a></p>
     </div>
   </div>
 
@@ -150,12 +150,12 @@ figures:
 
   </div>
 
-  <a href="/ctzn-app" class="banner banner_next" style="background-image: url(/images/ctzn-app/2048-wide/poster.jpg); background-position: 50% 25%;">
-    <div class="banner__next-project-container">
-      <h2 class="banner__next-project">Next project →</h2>
+  <a href="/ctzn-app" class="project-next" style="background-image: url(/images/ctzn-app/2048-wide/poster.jpg); background-position: 50% 25%;">
+    <div class="project-next__direction">
+      <h2>Next project →</h2>
     </div>
-    <div class="banner__title-container banner__title-container_link banner__title-container_next">
-      <h3 class="banner__title banner__title_link">CTZN App</h3>
-      <p class="banner__with banner__with_link">with the team at <span class="phrase">GOOD Worldwide</span></p>
+    <div class="project-next__container">
+      <h3 class="project-next__title">CTZN App</h3>
+      <p class="project-next__company">with the team at <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
