--- a/good-community.html
+++ b/good-community.html
@@ -18,10 +18,10 @@ figures:
 
 {% include ahoy.html %}
 
-  <div class="banner banner_details" style="background-image: url(/images/good-community/2048-wide/poster-a.jpg); background-position: 2% 50%;">
-    <div class="banner__title-container">
-      <h1 class="banner__title banner__title_details">GOOD Community</h1>
-      <p class="banner__with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
+  <div class="project-header" style="background-image: url(/images/good-community/2048-wide/poster-a.jpg); background-position: 2% 50%;">
+    <div class="project-header__container">
+      <h1 class="project-header__title">GOOD Community</h1>
+      <p class="project-header__company">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
   </div>
 
@@ -119,12 +119,12 @@ figures:
 
   </div>
 
-  <a href="/ok-the-store" class="banner banner_next" style="background-image: url(/images/ok-the-store/2048-wide/poster-b.jpg)">
-    <div class="banner__next-project-container">
-      <h2 class="banner__next-project">Next project →</h2>
+  <a href="/ok-the-store" class="project-next" style="background-image: url(/images/ok-the-store/2048-wide/poster-b.jpg)">
+    <div class="project-next__direction">
+      <h2>Next project →</h2>
     </div>
-    <div class="banner__title-container banner__title-container_link banner__title-container_next">
-      <h3 class="banner__title banner__title_link">OK the Store</h3>
-      <p class="banner__with banner__with_link">with the team at <span class="phrase">Barrel Strength Design</span></p>
+    <div class="project-next__container">
+      <h3 class="project-next__title">OK the Store</h3>
+      <p class="project-next__company">with the team at <span class="phrase">Barrel Strength Design</span></p>
     </div>
   </a>
