--- a/grand-park.html
+++ b/grand-park.html
@@ -12,10 +12,10 @@ figures:
 
 {% include ahoy.html %}
 
-  <div class="banner banner_details" style="background-image: url(/images/grand-park/2048-wide/poster-b.jpg); background-position: 25% 50%;">
-    <div class="banner__title-container">
-      <h1 class="banner__title banner__title_details">4th of July <span class="phrase">at Grand Park</span></h1>
-      <p class="banner__with">with the team at <a href="https://www.musiccenter.org">The Music Center</a></p>
+  <div class="project-header" style="background-image: url(/images/grand-park/2048-wide/poster-b.jpg); background-position: 25% 50%;">
+    <div class="project-header__container">
+      <h1 class="project-header__title">4th of July <span class="phrase">at Grand Park</span></h1>
+      <p class="project-header__company">with the team at <a href="https://www.musiccenter.org">The Music Center</a></p>
     </div>
   </div>
 
@@ -96,12 +96,12 @@ figures:
 
   </div>
 
-  <a href="/kiva" class="banner banner_next" style="background-image: url(/images/kiva/2048-wide/poster-a.jpg)">
-    <div class="banner__next-project-container">
-      <h2 class="banner__next-project">Next project →</h2>
+  <a href="/kiva" class="project-next" style="background-image: url(/images/kiva/2048-wide/poster-a.jpg)">
+    <div class="project-next__direction">
+      <h2>Next project →</h2>
     </div>
-    <div class="banner__title-container banner__title-container_link banner__title-container_next">
-      <h3 class="banner__title banner__title_link">10 Days of Lending</h3>
-      <p class="banner__with banner__with_link">with the teams at Kiva and <span class="phrase">GOOD Worldwide</span></p>
+    <div class="project-next__container">
+      <h3 class="project-next__title">10 Days of Lending</h3>
+      <p class="project-next__company">with the teams at Kiva and <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
