--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -14,12 +14,12 @@ figures:
 
 {% include ahoy.html %}
 
-  <div class="banner banner_details" style="background-image: url(/images/ctzn-app/2048-wide/poster.jpg)">
-    <div class="banner__title-container">
-      <h1 class="banner__title banner__title_details">CTZN App</h1>
-      <p class="banner__with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
+  <div class="project-header" style="background-image: url(/images/ctzn-app/2048-wide/poster.jpg)">
+    <div class="project-header__container">
+      <h1 class="project-header__title">CTZN App</h1>
+      <p class="project-header__company">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
-    <p class="credit"><a href="https://www.linkedin.com/in/benisonchoi">Photo by <span>Benison Choi</span></a></p>
+    <p class="project-header__credit"><a href="https://www.linkedin.com/in/benisonchoi">Photo by <span>Benison Choi</span></a></p>
   </div>
 
   <div class="container">
@@ -134,12 +134,14 @@ figures:
 
   </div>
 
-  <a href="/good-community" class="banner banner_next" style="background-image: url(/images/good-community/2048-wide/poster-b.jpg);">
-    <div class="banner__next-project-container">
-      <h2 class="banner__next-project">Next project →</h2>
+  <a href="/good-community"
+     style="background-image: url(/images/good-community/2048-wide/poster-b.jpg);"
+     class="project-next">
+    <div class="project-next__direction">
+      <h2>Next project →</h2>
     </div>
-    <div class="banner__title-container banner__title-container_link banner__title-container_next">
-      <h3 class="banner__title banner__title_link">GOOD Community</h3>
-      <p class="banner__with banner__with_link">with the team at <span class="phrase">GOOD Worldwide</span></p>
+    <div class="project-next__container">
+      <h3 class="project-next__title">GOOD Community</h3>
+      <p class="project-next__company">with the team at <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
