--- a/good-fest.html
+++ b/good-fest.html
@@ -12,10 +12,10 @@ figures:
 
 {% include ahoy.html %}
 
-  <div class="banner banner_details" style="background-image: url(/images/good-fest/2048-wide/poster-a.jpg); background-position: top;">
-    <div class="banner__title-container">
-      <h1 class="banner__title banner__title_details">GOOD Fest</h1>
-      <p class="banner__with">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a>, <span class="phrase">sponsored by Google</span></p>
+  <div class="project-header" style="background-image: url(/images/good-fest/2048-wide/poster-a.jpg); background-position: top;">
+    <div class="project-header__container">
+      <h1 class="project-header__title">GOOD Fest</h1>
+      <p class="project-header__company">with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a>, <span class="phrase">sponsored by Google</span></p>
     </div>
   </div>
 
@@ -148,12 +148,12 @@ figures:
 
   </div>
 
-  <a href="/grand-park" class="banner banner_next" style="background-image: url(/images/grand-park/2048-wide/poster-a.jpg)">
-    <div class="banner__next-project-container">
-      <h2 class="banner__next-project">Next project →</h2>
+  <a href="/grand-park" class="project-next" style="background-image: url(/images/grand-park/2048-wide/poster-a.jpg)">
+    <div class="project-next__direction">
+      <h2>Next project →</h2>
     </div>
-    <div class="banner__title-container banner__title-container_link banner__title-container_next">
-      <h3 class="banner__title banner__title_link">4th of July <span class="phrase">at Grand Park</span></h3>
-      <p class="banner__with banner__with_link">with the team at <span class="phrase">The Music Center</span></p>
+    <div class="project-next__container">
+      <h3 class="project-next__title">4th of July <span class="phrase">at Grand Park</span></h3>
+      <p class="project-next__company">with the team at <span class="phrase">The Music Center</span></p>
     </div>
   </a>
