--- a/good.html
+++ b/good.html
@@ -18,10 +18,10 @@ figures:
 
 {% include ahoy.html %}
 
-  <div class="banner banner_details" style="background-image: url(/images/good/2048-wide/poster.jpg)">
-    <div class="banner__title-container">
-      <h1 class="banner__title banner__title_details">GOOD Worldwide</h1>
-      <p class="banner__with">with the teams at <a href="http://typecode.com">Type/Code</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
+  <div class="project-header" style="background-image: url(/images/good/2048-wide/poster.jpg)">
+    <div class="project-header__container">
+      <h1 class="project-header__title">GOOD Worldwide</h1>
+      <p class="project-header__company">with the teams at <a href="http://typecode.com">Type/Code</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
     <p class="credit"><a href="http://www.musiccenter.org">Photo by <span>The Music Center</span></a></p>
   </div>
@@ -106,12 +106,12 @@ figures:
 
   </div>
 
-  <a href="/food-oasis" class="banner banner_next" style="background-image: url(/images/food-oasis/2048-wide/poster-b.jpg);">
-    <div class="banner__next-project-container">
-      <h2 class="banner__next-project">Next project →</h2>
+  <a href="/food-oasis" class="project-next" style="background-image: url(/images/food-oasis/2048-wide/poster-b.jpg);">
+    <div class="project-next__direction">
+      <h2>Next project →</h2>
     </div>
-    <div class="banner__title-container banner__title-container_link banner__title-container_next">
-      <h3 class="banner__title banner__title_link">Food Oasis <span class="phrase">Los Angeles</span></h3>
-      <p class="banner__with banner__with_link">with the volunteers at <span class="phrase">Code for America</span></p>
+    <div class="project-next__container">
+      <h3 class="project-next__title">Food Oasis <span class="phrase">Los Angeles</span></h3>
+      <p class="project-next__company">with the volunteers at <span class="phrase">Code for America</span></p>
     </div>
   </a>
