--- a/kiva.html
+++ b/kiva.html
@@ -12,10 +12,10 @@ figures:
 
 {% include ahoy.html %}
 
-  <div class="banner banner_details" style="background-image: url(/images/kiva/2048-wide/poster-b.jpg); background-position: 25% 50%;">
-    <div class="banner__title-container">
-      <h1 class="banner__title banner__title_details">10 Days of Lending</h1>
-      <p class="banner__with">with the teams at <a href="https://www.paypal.com/stories/us/paypal-kiva-celebrating-ten-years-of-making-a-difference">PayPal</a>, <a href="https://www.kiva.org">Kiva</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
+  <div class="project-header" style="background-image: url(/images/kiva/2048-wide/poster-b.jpg); background-position: 25% 50%;">
+    <div class="project-header__container">
+      <h1 class="project-header__title">10 Days of Lending</h1>
+      <p class="project-header__company">with the teams at <a href="https://www.paypal.com/stories/us/paypal-kiva-celebrating-ten-years-of-making-a-difference">PayPal</a>, <a href="https://www.kiva.org">Kiva</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
   </div>
 
@@ -78,12 +78,12 @@ figures:
 
   </div>
 
-  <a href="/good" class="banner banner_next" style="background-image: url(/images/good/2048-wide/poster.jpg); background-size: cover; background-position: 50% 50%;">
-    <div class="banner__next-project-container">
-      <h2 class="banner__next-project">Next project →</h2>
+  <a href="/good" class="project-next" style="background-image: url(/images/good/2048-wide/poster.jpg); background-size: cover; background-position: 50% 50%;">
+    <div class="project-next__direction">
+      <h2>Next project →</h2>
     </div>
-    <div class="banner__title-container banner__title-container_link banner__title-container_next">
-      <h3 class="banner__title banner__title_link">GOOD Worldwide</h3>
-      <p class="banner__with banner__with_link">with the teams at <span class="phrase">Type/Code</span> and <span class="phrase">GOOD Worldwide</span></p>
+    <div class="project-next__container">
+      <h3 class="project-next__title">GOOD Worldwide</h3>
+      <p class="project-next__company">with the teams at <span class="phrase">Type/Code</span> and <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
