--- a/ok-the-store.html
+++ b/ok-the-store.html
@@ -14,10 +14,10 @@ figures:
 
 {% include ahoy.html %}
 
-  <div class="banner banner_details" style="background-image: url(/images/ok-the-store/2048-wide/poster-b.jpg)">
-    <div class="banner__title-container">
-      <h1 class="banner__title banner__title_details">OK the Store</h1>
-      <p class="banner__with">with the team at <a href="https://barrelstrengthdesign.com">Barrel Strength Design</a></p>
+  <div class="project-header" style="background-image: url(/images/ok-the-store/2048-wide/poster-b.jpg)">
+    <div class="project-header__container">
+      <h1 class="project-header__title">OK the Store</h1>
+      <p class="project-header__company">with the team at <a href="https://barrelstrengthdesign.com">Barrel Strength Design</a></p>
     </div>
   </div>
 
@@ -84,12 +84,12 @@ figures:
 
   </div>
 
-  <a href="/jj-burns" class="banner banner_next" style="background-image: url(/images/jj-burns/2048-wide/poster-b.jpg)">
-    <div class="banner__next-project-container">
-      <h2 class="banner__next-project">Next project →</h2>
+  <a href="/jj-burns" class="project-next" style="background-image: url(/images/jj-burns/2048-wide/poster-b.jpg)">
+    <div class="project-next__direction">
+      <h2>Next project →</h2>
     </div>
-    <div class="banner__title-container banner__title-container_link banner__title-container_next">
-      <h3 class="banner__title banner__title_link">JJ Burns &amp; Company</h3>
-      <p class="banner__with banner__with_link">with the team at <span class="phrase">Fahrenheit Studio</span></p>
+    <div class="project-next__container">
+      <h3 class="project-next__title">JJ Burns &amp; Company</h3>
+      <p class="project-next__company">with the team at <span class="phrase">Fahrenheit Studio</span></p>
     </div>
   </a>
