Amend my last commit.

--- a/good.html
+++ b/good.html
@@ -23,7 +23,7 @@ figures:
       <h1 class="project-header__title">GOOD Worldwide</h1>
       <p class="project-header__company">with the teams at <a href="http://typecode.com">Type/Code</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
-    <p class="credit"><a href="http://www.musiccenter.org">Photo by <span>The Music Center</span></a></p>
+    <p class="project-header__credit"><a href="http://www.musiccenter.org">Photo by <span>The Music Center</span></a></p>
   </div>
 
   <div class="container">
