Add links to GitHub projects.

--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -37,6 +37,7 @@ figures:
       <li><a href="https://ctznapp.com">Web application</a></li>
       <li><a href="https://goodinc.github.io/ctzn-ui/build/">Pattern library</a></li>
       <li><a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies">Stories page</a></li>
+      <li><a href="https://github.com/goodinc/ctzn-ui">GitHub Project</a></li>
     </ul>
 
     {% include figures.html %}
