--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Style & Code for the Web, by Jim Thoburn
+title: Jim Thoburn, a user interface developer for the Web
 class: home
 projects:
 - name: GOOD Fest
@@ -57,13 +57,13 @@ projects:
       </span>
     </a>
 
-    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user experience developer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
+    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user interface developer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
 
-    <h2>I partner with designers &amp; engineers to make robust products for the Web, that people <span class="phrase">love to use.</span></h2>
+    <h2>I partner with designers &amp; engineers to make robust web sites and applications, that people <span class="phrase">enjoy using.</span></h2>
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
-    <p>If you’re building a web site or application, I can help with prototypes, universal design, pattern libraries, <a href="#services" aria-label="Services">and more</a>!</p>
+    <p>If you’re building a product for the Web, I can help you streamline your design process, improve compatibility and performance, implement new features more easily, <a href="#services" aria-label="Services">and more</a>!</p>
 
     <p>Here are some example projects…</p>
 
@@ -118,7 +118,7 @@ projects:
   <div class="container" id="hello">
 
     <h1>Say hello!</h1>
-    <p>I’m available to work on a web project in the fall &amp; winter of 2017.</p>
+    <p>I’m available to help with a project or join a team, in the fall &amp; winter of 2017.</p>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
 
     <section class="social">
