--- a/good.html
+++ b/good.html
@@ -40,6 +40,7 @@ figures:
       <li><a href="http://www.goodinc.com">GOOD Worldwide</a></li>
       <li><a href="https://jimthoburn.github.io/goodinc-ui/design/">Web Prototypes</a></li>
       <li><a href="https://jimthoburn.github.io/goodinc-ui/build/">Pattern Library</a></li>
+      <li><a href="https://github.com/goodinc/goodinc-ui">GitHub Project</a></li>
     </ul>
 
     {% include figures.html %}
