--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@ projects:
 
     <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user interface developer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
 
-    <h2>I partner with designers &amp; engineers to make robust web sites and applications, that people <span class="phrase">enjoy using.</span></h2>
+    <h2>I partner with designers &amp; engineers to make robust <span class="phrase">web sites</span> and applications, that people <span class="phrase">enjoy using.</span></h2>
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
-    <p>If you’re building a product for the Web, I can help you streamline your design process, improve compatibility and performance, implement new features more easily, <a href="#services" aria-label="Services">and more</a>!</p>
+    <p>If you’re building a product for the Web, I can help you streamline your design process, improve compatibility &amp; performance, add new features more easily, <a href="#services" aria-label="Services">and more</a>!</p>
 
-    <p>Here are some example projects…</p>
+    <p>Here are some projects and teams I’ve worked with…</p>
 
   </div>
 
