Attempt to improve line breaks on home page.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ projects:
 
     <p>If you’re building a product for the Web, I can help you streamline your design process, improve compatibility &amp; performance, add new features more easily, <a href="#services" aria-label="Services">and more</a>!</p>
 
-    <p>Here are some projects and teams I’ve worked with…</p>
+    <p>Here are some <span class="phrase">projects and teams</span> <span class="phrase">I’ve worked with…</span></p>
 
   </div>
 
