Tweak home page

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@ projects:
       </li>
       -->
       <li>
-        <h2>Universal design</h2>
+        <h2>Production-ready user interfaces</h2>
         <p>From your ideas, sketches or high-fidelity compositions, I’ll make a fast, lightweight and robust <a href="http://www.goodinc.com/about/philosophy" aria-label="example universal design">user interface</a>—that’s responsive and accessible to anyone in your audience—built with production-ready HTML, CSS and JavaScript.</p>
       </li>
       <li>
-        <h2>Pattern libraries</h2>
+        <h2>Living style guides</h2>
         <p>During the development process, I’ll look for and document <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">reusable code</a>. This will help you create additional pages and features for your project in the future.</p>
       </li>
     </ul>
