Update case studies

--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -33,11 +33,17 @@ figures:
     <h2>Visit the project</h2>
 
     <ul class="action">
-      <li><a href="http://getctzn.com">CTZN</a></li>
+      <li><a href="http://getctzn.com">Promotional site</a></li>
       <li><a href="https://ctznapp.com">Web application</a></li>
-      <li><a href="https://goodinc.github.io/ctzn-ui/build/">Pattern library</a></li>
       <li><a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies">Stories page</a></li>
-      <li><a href="https://github.com/goodinc/ctzn-ui">GitHub Project</a></li>
+      <li><a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies?channel=1">Live channel</a></li>
+    </ul>
+
+    <h2>Behind the scenes</h2>
+
+    <ul class="action">
+      <li><a href="https://goodinc.github.io/ctzn-ui/">UI library</a></li>
+      <li><a href="https://github.com/goodinc/ctzn-ui">Code repository</a></li>
     </ul>
 
     {% include figures.html %}
