--- a/good.html
+++ b/good.html
@@ -38,9 +38,9 @@ figures:
 
     <ul class="action">
       <li><a href="http://www.goodinc.com">GOOD Worldwide</a></li>
-      <li><a href="https://jimthoburn.github.io/goodinc-ui/design/">Web Prototypes</a></li>
-      <li><a href="https://jimthoburn.github.io/goodinc-ui/build/">Pattern Library</a></li>
-      <li><a href="https://github.com/goodinc/goodinc-ui">GitHub Project</a></li>
+      <li><a href="https://jimthoburn.github.io/goodinc-ui/design/">Design prototype</a></li>
+      <li><a href="https://jimthoburn.github.io/goodinc-ui/build/">UI library</a></li>
+      <li><a href="https://github.com/goodinc/goodinc-ui">Code repository</a></li>
     </ul>
 
     {% include figures.html %}
