--- a/grand-park.html
+++ b/grand-park.html
@@ -33,7 +33,7 @@ figures:
 
     <ul class="action">
       <li><a href="https://july4.grandparkla.org">4th of July at Grand Park</a></li>
-      <li><a href="https://github.com/grandparkla/july4">GitHub Project</a></li>
+      <li><a href="https://github.com/grandparkla/july4">Code repository</a></li>
     </ul>
 
     {% include figures.html %}
