--- a/index.html
+++ b/index.html
@@ -111,14 +111,26 @@ projects:
       </li>
     </ul>
 
-    <h2>I can also help with…</h2>
+    <h2>I can also assist with…</h2>
     <p>…browser/device compatibility, testing and improving accessibility, optimizing front end code for performance, integration with templates, and responsive HTML emails.</p>
+
+    <!--
+    <h2>I’m especially interested in helping companies with a mission, like…</h2>
+
+    <ul>
+      <li>Keeping the Web open, accessible, and protecting people’s privacy</li>
+      <li>Making a city better for the people who live there</li>
+      <li>Making essential services better for people who need them</li>
+      <li>Making things for the Web that teach things like science, math and art</li>
+      <li>Making tools that help other people accomplish those things</li>
+    </ul>
+    -->
   </div>
 
   <div class="container" id="hello">
 
     <h1>Say hello!</h1>
-    <p>I’m available to help with a project or join a team, in the fall &amp; winter of 2017.</p>
+    <p>I’m available to work on a project or join a team, in the winter &amp; spring, 2017-2018.</p>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
 
     <section class="social">
@@ -126,8 +138,10 @@ projects:
       <h2>Find me at the social places</h2>
       <ul>
         <li><a href="https://github.com/jimthoburn">GitHub</a></li>
+        <li><a href="https://codepen.io/jimthoburn">CodePen</a></li>
         <li><a href="https://twitter.com/jimthoburn">Twitter</a></li>
         <li><a href="https://www.linkedin.com/in/jimthoburn">LinkedIn</a></li>
+        <li><a href="https://www.flickr.com/photos/jimthoburn/">Flickr</a></li>
       </ul>
 
     </section>
