--- a/jj-burns.html
+++ b/jj-burns.html
@@ -33,7 +33,7 @@ figures:
     <h2>Visit the project</h2>
     <ul class="action">
       <li><a href="http://jjburns.com">JJ Burns &amp; Company</a></li>
-      <li><a href="http://jjburns.com/assets/html/patterns/">Pattern library</a></li>
+      <li><a href="http://jjburns.com/assets/html/patterns/">UI library</a></li>
     </ul>
 
     {% include figures.html %}
