--- a/food-oasis.html
+++ b/food-oasis.html
@@ -38,7 +38,7 @@ figures:
 
     <ul class="action">
       <li><a href="https://foodoasis.la">Food Oasis Los Angeles</a></li>
-      <li><a href="https://github.com/foodoasisla/site">GitHub Project</a></li>
+      <li><a href="https://github.com/foodoasisla/site">Code repository</a></li>
     </ul>
 
     {% include figures.html %}
