--- a/good-community.html
+++ b/good-community.html
@@ -40,9 +40,9 @@ figures:
     <h2>Visit the project</h2>
     <ul class="action">
       <li><a href="http://web.archive.org/web/20150909154620/http://community.good.is/popular/do">GOOD Community, <small>on archive.org</small></a></li>
-      <li><a href="https://goodinc.github.io/citizen-ui/html/prototype/">Web prototypes</a></li>
-      <li><a href="https://goodinc.github.io/citizen-ui/html/patterns/">Pattern library</a></li>
-      <li><a href="https://github.com/goodinc/citizen-ui">GitHub Project</a></li>
+      <li><a href="https://goodinc.github.io/citizen-ui/html/prototype/">Design prototype</a></li>
+      <li><a href="https://goodinc.github.io/citizen-ui/html/patterns/">UI library</a></li>
+      <li><a href="https://github.com/goodinc/citizen-ui">Code repository</a></li>
     </ul>
 
     {% include figures.html %}
