Amend my last commit

--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -43,7 +43,7 @@ figures:
 
     <ul class="action">
       <li><a href="https://goodinc.github.io/ctzn-ui/">UI library</a></li>
-      <li><a href="https://github.com/goodinc/ctzn-ui">Code repository</a></li>
+      <li><a href="https://github.com/goodinc/ctzn-ui">GitHub project</a></li>
     </ul>
 
     {% include figures.html %}
