--- a/good-community.html
+++ b/good-community.html
@@ -42,7 +42,7 @@ figures:
       <li><a href="http://web.archive.org/web/20150909154620/http://community.good.is/popular/do">GOOD Community, <small>on archive.org</small></a></li>
       <li><a href="https://goodinc.github.io/citizen-ui/html/prototype/">Design prototype</a></li>
       <li><a href="https://goodinc.github.io/citizen-ui/html/patterns/">UI library</a></li>
-      <li><a href="https://github.com/goodinc/citizen-ui">Code repository</a></li>
+      <li><a href="https://github.com/goodinc/citizen-ui">GitHub project</a></li>
     </ul>
 
     {% include figures.html %}
