--- a/food-oasis.html
+++ b/food-oasis.html
@@ -57,7 +57,9 @@ figures:
       <h3>Design</h3>
       <ul>
         <li><a href="https://www.linkedin.com/in/halina-zarate-a6b47b119/">Halina Zarate</a></li>
+        <!--
         <li>Melissa Halim</li>
+        -->
       </ul>
     </div>
 
@@ -135,7 +137,7 @@ figures:
       <h3>Web Hosting</h3>
       <ul>
         <li><a href="https://github.com">GitHub Pages</a></li>
-        <li><a href="https://www.cloudflare.com">Cloud Flare</a></li>
+        <li><a href="https://www.cloudflare.com">Cloudflare</a></li>
       </ul>
     </div>
 
