--- a/grand-park.html
+++ b/grand-park.html
@@ -90,7 +90,7 @@ figures:
       <h3>Web Hosting</h3>
       <ul>
         <li><a href="https://github.com">GitHub Pages</a></li>
-        <li><a href="https://www.cloudflare.com">Cloud Flare</a></li>
+        <li><a href="https://www.cloudflare.com">Cloudflare</a></li>
       </ul>
     </div>
 
