--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ projects:
   <div class="container" id="hello">
 
     <h1>Say hello!</h1>
-    <p>I’m available to work on a project or join a team, in the spring of 2018.</p>
+    <p>I’m available to work on a project or join a team, in the summer of 2018.</p>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
 
     <section class="social">
