--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@ projects:
     <h2>I can also assist with…</h2>
     <p>…browser/device compatibility, testing and improving accessibility, optimizing front end code for performance, integration with templates, and responsive HTML emails.</p>
 
-    <!--
     <h2>I’m especially interested in helping companies with a mission, like…</h2>
 
     <ul>
@@ -122,9 +121,8 @@ projects:
       <li>Making a city better for the people who live there</li>
       <li>Making essential services better for people who need them</li>
       <li>Making things for the Web that teach things like science, math and art</li>
-      <li>Making tools that help other people accomplish those things</li>
+      <li>Creating tools that help other people accomplish those things</li>
     </ul>
-    -->
   </div>
 
   <div class="container" id="hello">
