Tweak home page

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@ projects:
     <ul>
       <li>Keeping the Web open, accessible, and protecting people’s privacy</li>
       <li>Making a city better for the people who live there</li>
-      <li>Making essential services better for people who need them</li>
-      <li>Making things for the Web that teach things like science, math and art</li>
-      <li>Creating tools that help other people accomplish those things</li>
+      <li>Improving essential services for people who need them</li>
+      <li>Creating products for the Web that teach things like science, math and art</li>
+      <li>Buidling tools that help other people accomplish those things</li>
     </ul>
   </div>
 
