--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@ projects:
     <h2>I’m especially interested in helping companies with a mission, like…</h2>
 
     <ul>
-      <li>Keeping the Web open, accessible, and protecting people’s privacy</li>
-      <li>Making a city better for the people who live there</li>
+      <li>Keeping the Web open, accessible, and protecting privacy</li>
+      <li>Making a city a better place to live</li>
       <li>Improving essential services for people who need them</li>
       <li>Creating products for the Web that teach things like science, math and art</li>
-      <li>Buidling tools that help other people accomplish those things</li>
+      <li>Building tools that help others accomplish those things</li>
     </ul>
   </div>
 
