Update Food Oasis case study.

--- a/food-oasis.html
+++ b/food-oasis.html
@@ -57,9 +57,7 @@ figures:
       <h3>Design</h3>
       <ul>
         <li><a href="https://www.linkedin.com/in/halina-zarate-a6b47b119/">Halina Zarate</a></li>
-        <!--
-        <li>Melissa Halim</li>
-        -->
+        <li><a href="https://www.linkedin.com/in/melissahalim/">Melissa Halim</a></li>
       </ul>
     </div>
 
