Update OK the Store case study

--- a/ok-the-store.html
+++ b/ok-the-store.html
@@ -3,9 +3,9 @@ layout: default
 title: OK the Store
 figures:
 - caption: OK the Store
-  url: https://web-beta.archive.org/web/20140802135613/okthestore.com
+  url: https://web.archive.org/web/20141003055521/https://okthestore.com/
 - caption: Category page
-  url: https://web-beta.archive.org/web/20140803111027/http://okthestore.com/shop/category/gear
+  url: https://okthestore.jimthoburn.com/category.html
 - caption: Prototypes
   url: http://okthestore.jimthoburn.com
 - caption: Item page prototype
@@ -34,7 +34,7 @@ figures:
       <!--
       <li><a href="http://okthestore.com">OK the Store</a></li>
       -->
-      <li><a href="https://web-beta.archive.org/web/20140802135613/okthestore.com">OK the Store, <small>on archive.org</small></a></li>
+      <li><a href="https://web.archive.org/web/20141003055521/okthestore.com">OK the Store, <small>on archive.org</small></a></li>
       <li><a href="http://okthestore.jimthoburn.com">Design Prototype</a></li>
     </ul>
 
