Add “My LA2050 Activation Challenge” case study

--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -84,12 +84,12 @@ figures:
 
   </div>
 
-  <a href="/good-fest" class="project-next" style="background-image: url(/images/good-fest/2048-wide/poster-a.jpg); background-position: top;">
+  <a href="/la2050" class="project-next" style="background-image: url(/images/la2050/2048-wide/poster.jpg);">
     <div class="project-next__direction">
       <h2>Next project →</h2>
     </div>
     <div class="project-next__container">
-      <h3 class="project-next__title">GOOD Fest</h3>
-      <p class="project-next__company">with the team at <span class="phrase">GOOD Worldwide,</span> <span class="phrase">sponsored by Google</span></p>
+      <h3 class="project-next__title">My LA2050 Activation Challenge</h3>
+      <p class="project-next__company">with the team at <span class="phrase">The Goldhirsh Foundation</span></p>
     </div>
   </a>
