--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ layout: default
 title: Jim Thoburn, a user experience developer for the Web
 class: home
 projects:
+- name: My LA2050 Activation Challenge
+  company: The Goldhirsh Foundation
+  url: /la2050
+  image: /images/la2050/2048-wide/poster.jpg
 - name: GOOD Fest
   company: Google &amp; GOOD Worldwide
   url: /good-fest
