Update LA2050 case study

--- a/la2050.html
+++ b/la2050.html
@@ -100,6 +100,8 @@ figures:
       <h3>Workflow</h3>
       <ul>
         <li><a href="https://imageoptim.com">ImageOptim</a></li>
+        <li><a href="http://gulpjs.com">Gulp.js</a></li>
+        <li><a href="https://nodejs.org">Node.js</a></li>
         <li><a href="https://github.com">GitHub</a></li>
       </ul>
     </div>
