Update LA2050 case study

--- a/la2050.html
+++ b/la2050.html
@@ -54,8 +54,15 @@ figures:
     <div>
       <h3>Marketing</h3>
       <ul>
-        <li><a href="https://www.linkedin.com/in/khalilhahaynes/">Khalilha Haynes</a></li>
         <li><a href="https://www.linkedin.com/in/megan-loughman-420456a9">Megan Loughman</a></li>
+      </ul>
+    </div>
+
+    <div>
+      <h3>Data Analysis</h3>
+      <ul>
+        <li><a href="https://www.linkedin.com/in/khalilhahaynes/">Khalilha Haynes</a></li>
+        <li>Aidan Birnbaum</li>
       </ul>
     </div>
 
