Update LA2050 case study

--- a/la2050.html
+++ b/la2050.html
@@ -29,9 +29,9 @@ figures:
 
     <p>The activation challenge is a voting contest held each year to support organizations who are working to improve Los Angeles.</p>
 
-    <p>Megan and I partnered up to design a web site, which explains the contest and showcases the work being done by organizations in LA.</p>
+    <p>Our designer, Megan, and I partnered up to create a <a href="https://activation.la2050.org">web site</a> that explains the contest, showcases the submitted projects, and allows visitors to vote for <span class="phrase">their favorites.</span></p>
 
-    <p>We were expecting potentially thousands of voters at a time, so I built the site with static HTML that can served with high availability, performance and security–at low cost and without server-side engineering work by our team. I relied on <a href="#tools">third-party services</a> for content management, user submissions &amp; accounts. I was hugly inspired by <a href="http://thewebahead.net/54">Young Hahn</a> and Dave Cole’s work for <a href="https://developmentseed.org/blog/new-healthcare-gov-is-open-and-cms-free/">healthcare.gov</a></p>
+    <p>We were expecting potentially thousands of voters at a time, so we built a <a href="https://jekyllrb.com">static web site</a> that can be served with high availability, performance and security–at low cost and without server-side engineering work by our team. Content management, user submissions &amp; accounts were provided by <a href="#tools">third-party services</a>. Young Hahn and Dave Cole’s work for <a href="https://developmentseed.org/blog/new-healthcare-gov-is-open-and-cms-free/">healthcare.gov</a> was a huge inspiration. You can learn more about it on Jen Simmon’s <a href="http://thewebahead.net/54">fantastic podcast</a>.</p>
 
     <h2>Visit the project</h2>
 
