--- a/la2050.html
+++ b/la2050.html
@@ -4,15 +4,15 @@ title: My LA2050 Activation Challenge
 figures:
 - caption: My LA2050 Activation Challenge
   url: https://activation.la2050.org
+- caption: Welcome, Neighbor: Making LA the most welcoming place in America
+  url: https://activation.la2050.org/connect/mirys-list/
+- caption: Timeline
+  url: https://activation.la2050.org/timeline/
 - caption: My LA2050 Activation Challenge
   url: https://activation.la2050.org
-- caption: My LA2050 Activation Challenge
+- caption: Vote
   url: https://activation.la2050.org
-- caption: My LA2050 Activation Challenge
-  url: https://activation.la2050.org
-- caption: My LA2050 Activation Challenge
-  url: https://activation.la2050.org
-- caption: My LA2050 Activation Challenge
+- caption: Sign in with your phone
   url: https://activation.la2050.org
 ---
 
