Fix image caption for LA2050

--- a/la2050.html
+++ b/la2050.html
@@ -4,7 +4,7 @@ title: My LA2050 Activation Challenge
 figures:
 - caption: My LA2050 Activation Challenge
   url: https://activation.la2050.org
-- caption: Welcome, Neighbor: Making LA the most welcoming place in America
+- caption: "Welcome, Neighbor: Making LA the most welcoming place in America"
   url: https://activation.la2050.org/connect/mirys-list/
 - caption: Timeline
   url: https://activation.la2050.org/timeline/
