--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Jim Thoburn, a user experience developer for the Web
+title: Jim Thoburn, a design engineer for the Web
 class: home
 projects:
 - name: My LA2050 Activation Challenge
@@ -61,13 +61,13 @@ projects:
       </span>
     </a>
 
-    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user experience developer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
+    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} design engineer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
 
-    <h2>I partner with designers &amp; engineers to make robust products for the Web, that people <span class="phrase">love to use.</span></h2>
+    <h2>I partner with teams to make robust <span class="phrase">web sites &amp; applications</span> that people <span class="phrase">love to use.</span></h2>
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
-    <p>If you’re building a web site or application, I can help you streamline your design process, improve compatibility &amp; performance, add new features more easily, <a href="#services" aria-label="Services">and more</a>!</p>
+    <p>If you’re building something for the Web, I can help you streamline your design process, improve accessibility &amp; performance, add new features more easily, <a href="#services" aria-label="Services">and more</a>!</p>
 
     <p>Here are some <span class="phrase">projects and teams</span> <span class="phrase">I’ve worked with…</span></p>
 
