--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ projects:
       </li>
       -->
       <li>
-        <h2>Production-ready user interfaces</h2>
+        <h2>User interfaces</h2>
         <p>From your ideas, sketches or high-fidelity compositions, I’ll make a fast, lightweight and robust <a href="http://www.goodinc.com/about/philosophy" aria-label="example universal design">user interface</a>—that’s responsive and accessible to anyone in your audience—built with production-ready HTML, CSS and JavaScript.</p>
       </li>
       <li>
@@ -132,7 +132,7 @@ projects:
   <div class="container" id="hello">
 
     <h1>Say hello!</h1>
-    <p>I’m available to work on a project or join a team, in the fall of 2018.</p>
+    <p>I’m available to work on a project or join a team, in the winter of 2018.</p>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
 
     <section class="social">
