Add a link to GOOD case study

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Jim Thoburn, a design engineer for the Web
+title: Style & Code for the Web, by Jim Thoburn
 class: home
 projects:
 - name: My LA2050 Activation Challenge
