--- a/jj-burns.html
+++ b/jj-burns.html
@@ -30,6 +30,8 @@ figures:
 
     <p>My role also involved writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with server-side templates. (We used ExpressionEngine.)</p>
 
+    <p>You can <a href="http://www.goodinc.com/project/the_big_impact_of_small_loans">read more about the project</a> at GOOD’s web site.</p>
+
     <h2>Visit the project</h2>
     <ul class="action">
       <li><a href="http://jjburns.com">JJ Burns &amp; Company</a></li>
