Tweak home page intro

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ projects:
 
     <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} design engineer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
 
-    <h2>I partner with teams to make robust <span class="phrase">web sites &amp; applications</span> that people <span class="phrase">love to use.</span></h2>
+    <h2>I partner with teams to make robust <span class="phrase">web products</span> that people <span class="phrase">love to use.</span></h2>
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
